2008-04-28  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/title/TextTitle.java
    (maximumLinesToDisplay): New field,
    (getMaximumLinesToDisplay): New method,
    (setMaximumLinesToDisplay): Likewise,
    (arrangeFN): Pass maximumLinesToDisplay,
    (arrangeRR): Likewise,
    (equals): Added tests for additional fields.

2008-04-28  David Gilbert  <david.gilbert@object-refinery.com>

    Bug 1950037:
    * source/org/jfree/chart/plot/CombinedDomainCategoryPlot.java
    (zoomRangeAxes(double, PlotRenderingInfo, Point2D, boolean)): 
    New method override,
    * source/org/jfree/chart/plot/CombinedDomainXYPlot.java
    (zoomRangeAxes(double, PlotRenderingInfo, Point2D, boolean)): 
    New method override,
    * source/org/jfree/chart/plot/CombinedRangeXYPlot.java
    (zoomDomainAxes(double, PlotRenderingInfo, Point2D, boolean)): 
    New method override.

2008-04-23  David Gilbert  <david.gilbert@object-refinery.com>

    Bug 1942059:
    * source/org/jfree/chart/axis/CategoryAxis.java
    (calculateTextBlockWidth): Use correct insets.

2008-04-23  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/labels/BubbleXYItemLabelGenerator.java,
    * source/org/jfree/chart/labels/StandardPieSectionLabelGenerator.java:
    Implemented PublicCloneable.

2008-04-23  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/LegendItemCollection.java
    (clone): Reimplemented,
    * source/org/jfree/chart/plot/CategoryPlot.java
    (equals): Check additional fields,
    (clone): Clone some internal structures.

2008-04-23  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/LegendItem.java
    (LegendItem(String)): New constructor,
    (clone): Implemented.

2008-04-23  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/annotations/CategoryLineAnnotation.java,
    * source/org/jfree/chart/annotations/CategoryTextAnnotation.java: